--- a/MarcelJoachimKloubert.CLRToolbox.35.WinForms/MarcelJoachimKloubert.CLRToolbox.35.WinForms.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.WinForms/MarcelJoachimKloubert.CLRToolbox.35.WinForms.csproj
@@ -53,9 +53,30 @@
       <Link>Helpers\WinFormsHelper.InvokeSafe.cs</Link>
       <DependentUpon>WinFormsHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20.WinForms\Helpers\WinFormsHelper.MakeMoveable.cs">
+      <Link>Helpers\WinFormsHelper.MakeMoveable.cs</Link>
+      <DependentUpon>WinFormsHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20.WinForms\Helpers\WinFormsHelper.SendMessage.cs">
+      <Link>Helpers\WinFormsHelper.SendMessage.cs</Link>
+      <DependentUpon>WinFormsHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20.WinForms\Helpers\WinFormsHelper.UnmakeMoveable.cs">
+      <Link>Helpers\WinFormsHelper.UnmakeMoveable.cs</Link>
+      <DependentUpon>WinFormsHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\ClrToolboxWinFormsExtensionMethods.cs" />
+    <Compile Include="Extensions\Controls.MakeMoveable.cs">
+      <DependentUpon>Controls.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\Controls.SendMessage.cs">
+      <DependentUpon>Controls.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\Controls.cs" />
     <Compile Include="Extensions\Controls.InvokeSafe.cs">
+      <DependentUpon>Controls.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\Controls.UnmakeMoveable.cs">
       <DependentUpon>Controls.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
