--- a/MarcelJoachimKloubert.CLRToolbox.45.WPF/MarcelJoachimKloubert.CLRToolbox.45.WPF.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45.WPF/MarcelJoachimKloubert.CLRToolbox.45.WPF.csproj
@@ -55,6 +55,10 @@
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.35.wpf\behaviours\WebBrowser.cs">
       <Link>Behaviours\WebBrowser.cs</Link>
     </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.35.wpf\controls\SVGImage.xaml.cs">
+      <Link>Controls\SVGImage.xaml.cs</Link>
+      <DependentUpon>SVGImage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35.WPF\Data\CommandValueConverterBase.cs">
       <Link>Data\CommandValueConverterBase.cs</Link>
     </Compile>
@@ -145,6 +149,13 @@
       <Project>{c24ae28b-5be0-44a7-9232-11e090aa0641}</Project>
       <Name>MarcelJoachimKloubert.CLRToolbox.45</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="..\marceljoachimkloubert.clrtoolbox.35.wpf\controls\SVGImage.xaml">
+      <Link>Controls\SVGImage.xaml</Link>
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
