--- a/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
@@ -156,10 +156,19 @@
       <Link>Data\DataConnectionBase.cs</Link>
     </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\data\documents\DocumentBase.cs">
-      <Link>Documents\DocumentBase.cs</Link>
+      <Link>Data\Documents\DocumentBase.cs</Link>
     </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\data\documents\IDocument.cs">
-      <Link>Documents\IDocument.cs</Link>
+      <Link>Data\Documents\IDocument.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Data\Documents\Svg\SvgChildBase.cs">
+      <Link>Data\Documents\Svg\SvgChildBase.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\data\documents\svg\SvgDocument.cs">
+      <Link>Data\Documents\Svg\SvgDocument.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\data\documents\svg\SvgGroup.cs">
+      <Link>Data\Documents\Svg\SvgGroup.cs</Link>
     </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\data\entities\EntityBase.cs">
       <Link>Data\Entities\EntityBase.cs</Link>
