extension methods and cleanups
- ADD: EnumerateControls() extension methods
- CHG: code cleanups

--- a/MarcelJoachimKloubert.CLRToolbox.35.WinForms/MarcelJoachimKloubert.CLRToolbox.35.WinForms.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.WinForms/MarcelJoachimKloubert.CLRToolbox.35.WinForms.csproj
@@ -66,6 +66,9 @@
       <DependentUpon>WinFormsHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="Extensions\ClrToolboxWinFormsExtensionMethods.cs" />
+    <Compile Include="Extensions\Controls.EnumerateControls.cs">
+      <DependentUpon>Controls.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\Controls.MakeMoveable.cs">
       <DependentUpon>Controls.cs</DependentUpon>
     </Compile>
