GUI, projects, collections, extension / helper methods, compatiblity, improvements, fixes and cleanups
- ADD: started to implement "Drag 'N Batch" project
- ADD: draggable borderless base classes for WPF and WinForms
- ADD: BooleanToVisibility WPF converter
- ADD: base WPF value converter class that can handle a separated string
list of parameters
- ADD: IInitializable interfaces
- DEL: removed overwritten collection helper methods in .NET 3.5 libs
and later
- ADD: IGeneralList interface
- ADD: System.Action<T1, T2, T3> for pre .NET 3.5 systems
- FIX: minor documentation fixes
- CHG: code cleanups and improvements

--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,9 @@ Projects/MarcelJoachimKloubert.CryptoDrop/MarcelJoachimKloubert.CryptoDrop/confi
 Projects/MarcelJoachimKloubert.ClrDocToMediaWiki/MarcelJoachimKloubert.ClrDocToMediaWiki/config.ini
 Projects/MarcelJoachimKloubert.ClrDocToMediaWiki/MarcelJoachimKloubert.ClrDocToMediaWiki.v12.suo
 MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj.user
+/Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch/config.ini
+/Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch/obj
+/Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch/bin
+Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch.v12.suo
+/Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch.PlugIns.ConverterPlugIn/obj
+/Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch.PlugIns.ConverterPlugIn/bin
