--- a/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
@@ -74,6 +74,13 @@
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\caching\DelegateCache.cs">
       <Link>Caching\DelegateCache.cs</Link>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Collections\GeneralList.cs">
+      <Link>Collections\GeneralList.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Collections\GeneralList.Interface.cs">
+      <Link>Collections\GeneralList.Interface.cs</Link>
+      <DependentUpon>GeneralList.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Collections\Generic\DelegateComparer.cs">
       <Link>Collections\Generic\DelegateComparer.cs</Link>
     </Compile>
@@ -88,6 +95,12 @@
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Collections\Generic\SimpleForAllItemExecutionContext.cs">
       <Link>Collections\Generic\SimpleForAllItemExecutionContext.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Collections\Generic\TMArrayBuffer.cs">
+      <Link>Collections\Generic\TMArrayBuffer.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Collections\IGeneralList.cs">
+      <Link>Collections\IGeneralList.cs</Link>
     </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\componentmodel\INotificationObject.cs">
       <Link>ComponentModel\INotificationObject.cs</Link>
@@ -357,6 +370,10 @@
       <Link>Helpers\CollectionHelper.AsSequence.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.Cast.cs">
+      <Link>Helpers\CollectionHelper.Cast.cs</Link>
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.Count.cs">
       <Link>Helpers\CollectionHelper.Count.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
@@ -384,8 +401,20 @@
       <Link>Helpers\CollectionHelper.IsNotEmpty.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.OfType.cs">
+      <Link>Helpers\CollectionHelper.OfType.cs</Link>
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.Randomize.cs">
       <Link>Helpers\CollectionHelper.Randomize.cs</Link>
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.Range.cs">
+      <Link>Helpers\CollectionHelper.Range.cs</Link>
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.RangeLong.cs">
+      <Link>Helpers\CollectionHelper.RangeLong.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.Select.cs">
@@ -414,6 +443,10 @@
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.Take.cs">
       <Link>Helpers\CollectionHelper.Take.cs</Link>
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.ToArray.cs">
+      <Link>Helpers\CollectionHelper.ToArray.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.ToArray.IEnumerable.cs">
@@ -642,6 +675,9 @@
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IIdentifiable.cs">
       <Link>IIdentifiable.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IInitializable.cs">
+      <Link>IInitializable.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IO\CompareFileSystemItemsEventArgs.cs">
       <Link>IO\CompareFileSystemItemsEventArgs.cs</Link>
@@ -2304,10 +2340,6 @@
       <Link>Extensions\ValuesAndObjects.IsTrue.cs</Link>
       <DependentUpon>ValuesAndObjects.cs</DependentUpon>
     </Compile>
-    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Helpers\CollectionHelper.Cast.cs">
-      <Link>Helpers\CollectionHelper.Cast.cs</Link>
-      <DependentUpon>CollectionHelper.cs</DependentUpon>
-    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Helpers\CollectionHelper.Empty.cs">
       <Link>Helpers\CollectionHelper.Empty.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
@@ -2316,20 +2348,12 @@
       <Link>Helpers\CollectionHelper.FirstOrDefault.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
-    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Helpers\CollectionHelper.OfType.cs">
-      <Link>Helpers\CollectionHelper.OfType.cs</Link>
-      <DependentUpon>CollectionHelper.cs</DependentUpon>
-    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Helpers\CollectionHelper.Single.cs">
       <Link>Helpers\CollectionHelper.Single.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Helpers\CollectionHelper.SingleOrDefault.cs">
       <Link>Helpers\CollectionHelper.SingleOrDefault.cs</Link>
-      <DependentUpon>CollectionHelper.cs</DependentUpon>
-    </Compile>
-    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Helpers\CollectionHelper.ToArray.cs">
-      <Link>Helpers\CollectionHelper.ToArray.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Helpers\MethodHelper.Constructor.cs">
