--- a/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -51,12 +52,15 @@
   <ItemGroup>
     <Compile Include="Behaviours\WebBrowser.cs" />
     <Compile Include="Collections\ObjectModel\SynchronizedObservableCollection.cs" />
+    <Compile Include="Controls\BorderlessMoveableWindow.cs" />
     <Compile Include="Controls\SVGImage.xaml.cs">
       <DependentUpon>SVGImage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Data\CommandValueConverterBase.cs" />
     <Compile Include="Data\Impl\CommandValueConverter.cs" />
+    <Compile Include="Data\Impl\BooleanToVisibilityConverter.cs" />
     <Compile Include="Data\Impl\DelegateToCommandValueConverter.cs" />
+    <Compile Include="Data\MultiParamValueConverterBase.cs" />
     <Compile Include="Data\ValueConverterBase.cs" />
     <Compile Include="Data\ValueConverterBase.Interface.cs">
       <DependentUpon>ValueConverterBase.cs</DependentUpon>
