- FIX: set needed /unsafe options for "Release" build in project files

--- a/.gitignore
+++ b/.gitignore
@@ -258,3 +258,4 @@ MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj.u
 Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch.v12.suo
 /Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch.PlugIns.ConverterPlugIn/obj
 /Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch.PlugIns.ConverterPlugIn/bin
+Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin.v12.suo
