--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,9 @@ Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch.v12.s
 /Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch.PlugIns.ConverterPlugIn/obj
 /Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch.PlugIns.ConverterPlugIn/bin
 Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin.v12.suo
+/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono4/bin
+MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono.userprefs
+/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono2/obj
+/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono2/bin
+/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono4/obj
+/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono4/bin
